Adaptation des types dans le select de la liste des sessions

--- a/WebContent/mz/prospect/panels/_editFormation.xhtml
+++ b/WebContent/mz/prospect/panels/_editFormation.xhtml
@@ -100,7 +100,7 @@
 								<s:selectItems value="#{editProspectManager.listeSession}"
 									var="_session" label="#{_session}"
 									noSelectionLabel="Sélectionner une session"
-									itemValue="#{_session.session}" />
+									itemValue="#{_session.session.toString()}" />
 							</h:selectOneMenu>
 						</s:decorate>
 					</a:outputPanel></td>
