--- a/WebContent/mz/search/export/search_xls.xhtml
+++ b/WebContent/mz/search/export/search_xls.xhtml
@@ -188,7 +188,7 @@
 		</ui:include>		
 		<ui:include src="../../common/excel-column.xhtml">
 			<ui:param name="header" value="#{messages['formation.formationPartenaires']}"/>
-			<ui:param name="value" value="#{_dto.formation.formationsPartenairesAsString}"/>
+			<ui:param name="value" value="#{applicationManager.getFormationsPartenaire(_dto.formation)}"/>
 			<ui:param name="type" value="text"/>
 			
 		</ui:include>		
