Passage en majuscule : niveau dune formation

--- a/WebContent/mz/formation/edit.xhtml
+++ b/WebContent/mz/formation/edit.xhtml
@@ -371,9 +371,9 @@
 					<h:outputText value="#{messages['formation.niveau']}" />
 				</ui:define>
 				<h:selectOneMenu value="#{formation.niveau}" id="nivSelect">
-					<f:selectItem itemValue="débutant" />
-					<f:selectItem itemValue="intermédiaire" />
-					<f:selectItem itemValue="expert" />
+					<f:selectItem itemValue="Débutant" />
+					<f:selectItem itemValue="Intermédiaire" />
+					<f:selectItem itemValue="Expert" />
 				</h:selectOneMenu>
 			</s:decorate>
 			<s:decorate template="../layout/display.xhtml">
