--- a/WebContent/mail/mailLayoutExterne.xhtml
+++ b/WebContent/mail/mailLayoutExterne.xhtml
@@ -10,7 +10,7 @@
 	<ui:repeat var="_cc" value="#{email.ccAsArray}">
 		<m:cc address="#{_cc}"/>
 	</ui:repeat>
-	<m:subject>[N°DOSSIER]&#160;<ui:insert name="MailSubject" /></m:subject>
+	<m:subject><ui:insert name="MailSubject" /></m:subject>
 
 	<ui:insert name="MailAttachments" />
 
