--- a/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
+++ b/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
@@ -86,7 +86,9 @@
 						<ui:define name="label">
 							<h:outputText value="#{messages['prospect.dateCreation']}" />
 						</ui:define>
-						<h:outputText value="#{editProspectManager.prospect.dateCreation}" />
+						<h:outputText value="#{editProspectManager.prospect.dateCreation}" >
+						<f:convertDateTime type="both" locale="FR"/>
+						</h:outputText>
 						<a:outputPanel layout="inline" rendered="#{editProspectManager.prospect.prospectDetail.rempliPar != null}">
 						/ <h:outputText value="#{editProspectManager.prospect.prospectDetail.rempliPar}" />
 						</a:outputPanel>
@@ -97,7 +99,11 @@
 						</ui:define>
 						<h:outputText
 							value="#{editProspectManager.prospect.prospectDetail.datedevis}"
-							rendered="#{!empty editProspectManager.prospect.prospectDetail.datedevis}" />
+							rendered="#{!empty editProspectManager.prospect.prospectDetail.datedevis}" >
+							<f:convertDateTime type="both" locale="FR"/>
+							</h:outputText>
+							
+							
 						<h:outputText value="Non envoyé"
 							rendered="#{empty editProspectManager.prospect.prospectDetail.datedevis}" />
 					</s:decorate>
