Contrôles formulaire denvoi du devis

--- a/WebContent/mail/mailLayoutExterne.xhtml
+++ b/WebContent/mail/mailLayoutExterne.xhtml
@@ -10,6 +10,9 @@
 	<ui:repeat var="_cc" value="#{email.ccAsArray}">
 		<m:cc address="#{_cc}"/>
 	</ui:repeat>
+	<ui:repeat var="_bcc" value="#{email.bccAsArray}">
+		<m:cc address="#{_bcc}"/>
+	</ui:repeat>
 	<m:subject><ui:insert name="MailSubject" /></m:subject>
 
 	<ui:insert name="MailAttachments" />
