--- a/WebContent/mz/devis/envoiDevis.xhtml
+++ b/WebContent/mz/devis/envoiDevis.xhtml
@@ -119,6 +119,7 @@
 				<input type="hidden" name="cid" value="#{conversation.id}" />
 
 <center>
+<span style="color:red;font-style:bold">N'oubliez pas de joindre le devis généré !</span><br/><br/>
 				<h:commandButton value="Envoyer"
 					action="#{envoiDevisManager.send}"
 					style="width:100px;height:30px;"/>
